--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "A clean professional resume template",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.sass css/style.css -w"
+    "compile:sass": "sass sass/main.sass css/style.css -w"
   },
   "author": "Gabriel Sabella",
   "license": "ISC",
   "devDependencies": {
-    "node-sass": "^7.0.1"
+    "sass": "^1.59.2"
   }
 }
